# sprint-4

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
allure_report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure_report/data/test-cases/: 108a5e034a69a7.json  18773f0efab8e1c7.json  3d4f74589fbbfa59.json  3d99c64142466e7.json  4939648313f5f61c.json  4cec5e03dbc7dfac.json  62f06df2fc41bc4e.json  8117e1e2d32ccf17.json  814ccc0f4307b7f6.json  9a5b6aaf35d41e58.json  c9e8f0f15f4f581e.json  d63d17930dfdcb6c.json
allure_report/export/: influxDbData.txt  prometheusData.txt
allure_report/history/: duration-trend.json  history.json
allure_report/widgets/: severity.json  status-chart.json  summary.json
data/: order_data.py  person.py  urls.py
locators/: about_rent_order_page_locators.py  main_page_locators.py  order_page_locators.py
pages/: about_rent_order_page.py  base_page.py  main_page.py  order_page.py
tests/: test_logo.py  test_order_a_samokat.py  test_show_a_questions.py
